feat - get trips by pet
